[package]
name = "rsm-en"
version = "0.1.0"
edition = "2021"

[lib]
name = "rsm_en"
path = "src/lib.rs"

[dependencies]
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
plotters = "0.3"
tiny_http = "0.12"

[[bin]]
name = "blockchain"
path = "src/main.rs"

[[bin]]
name = "web_server"
path = "src/web_main.rs"

[[bin]]
name = "trading_backtest"
path = "src/trading_main.rs"

[[bin]]
name = "trading_server"
path = "src/trading_server.rs"
